deploy/natsapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: natsapi
  labels:
    app: natsapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: natsapi
  template:
    metadata:
      labels:
        app: natsapi
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      containers:
      - name: natsapi
        image: #k3d-k3slocal-registry:5000/natsapi:#{Build.BuildId}#
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        livenessProbe:
          httpGet:
            path: /healthy
            port: http
          initialDelaySeconds: 10
          timeoutSeconds: 5
        resources:
          requests:
            memory: "32Mi"
            cpu: "16m"
          limits:
            memory: "128Mi"
            cpu: "512m"
