deploy/natsapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: natsapi
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: natsapi
#  type: LoadBalancer
