deploy/natsapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: natsapi
  name: natsapi
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "natsapi.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: natsapi
            port:
              number: 80
